# ParaPy-KBE-Assignment-Heat-Exchanger

./: .gitignore  Check.md  README.md  client.py  environment.OFTPMSoptimiser.yml  gyroid_service_pb2.py  gyroid_service_pb2_grpc.py  howitworks.md  kbeutils-1.0-py3-none-any.whl  new.Dockerfile  pyproject.toml  run_container.ps1  test.py
inputs/: config.json
outputs/: history.tsv
parapy.gui/: main.py  pyproject.toml
parapygui/: GUIwxformbuilder.py  README.md  __init__.py  encapsulation.py  environment.py  fluid.py  geometry_export.py  gyroid.py  heat_exchanger.py  heatexchanger_example.py  info_button_templates.py  lattice.py  loader.py  main.py  manufacturability.py  objectives.py  optimization_history.py  pyproject.toml  pyslm_analysis.py  reporting.py  simulation.py  solidity.py  validators.py  webapp.py  workflow.py
parapygui/inputs/: requirements.json
parapygui/static/: index.html
