[project]
name = "parapygui"
version = "0.1.0"
description = "Bio-Inspired Heat Exchanger KBE Application — TU Delft AE4204 Team 16"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "parapy>=1.15, <1.16",
    "kbeutils",
    "wxpython",
    "matplotlib",
    "cairocffi",
    "grpcio==1.81.0",
    "grpcio-tools==1.81.0",
    "protobuf==6.33.6",
    "setuptools==82.0.1",
    "fastapi",
    "uvicorn[standard]",
    "scikit-image",
    "openpyxl",
    "python-multipart",
]

[project.optional-dependencies]
dfam = ["PythonSLM"]

[[tool.uv.index]]
url = "https://pypi.parapy.nl/simple/"
name = "parapy-index"
explicit = true

[tool.uv.sources]
parapy    = { index = "parapy-index" }
wxpython  = { index = "parapy-index" }
kbeutils  = { path = "../kbeutils-1.0-py3-none-any.whl" }

[project.scripts]
kbe-web    = "parapygui.webapp:app"
kbe-gui    = "parapygui.main:main"
